4/16/25:

- Add basic create account button
- Create basic form inputs
- Create content div to contain all divs
- Create top-text and btm-text divs
- Create signup-form as form element
- Change sideImg to side-img
- Create main-content and form divs
- Add commenting to css

4/15/25:

- Add font family for credit text
- Add logo to left of header text with responsive resizing
- Add responsive resizing to image and text based on screen/window size
- Add dark background with opacity behind header text
- Turn credits and header text white
- Center align credits text
- Create header and credits text within sideImg div
- Create sidebar div
- Create sideImg div and add background-image
- Change changelog to txt file
- Update pseudocode with specifics
- Create basic pseudocode
- Add commenting to css file
- Change pseudocode to txt file
- Rename background-image and image-sidebar

4/14/25:

- Add background image and logo image files
- Add Edo font
- Add placeholder image to html file
- Create pseudocode file
- Add boilerplate to html file and link css sheet
- Create README, index.html, formsStyle.css, and changelog