@@ -20,40 +20,64 @@
     font-style: normal;
 }
 
-/*
 .content {
     display: flex;
 }
-*/
 
-/* right side content
 .main-content {
+    width: 100%;
+}
+
+.top-text {
+    margin-left: 50px;
+    max-width: 29vw;
+    margin-bottom: 15px;
+}
+
+.form-wrapper {
+    background: blue;
+    width: 100%;
+    height: 30vh;
+}
+
+.form {
+    margin-left: 50px;
+    max-width: 29vw;
+}
+
+ul#cols {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 10px;
+    row-gap: 16px;
+    list-style: none;
+    padding: 0;
+}
+
+ul#cols li {
+    flex: 1 1 calc(50% - 5px);
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
-*/
 
-/*
-.top-text {
-    position: absolute;
-    top: 20%;
+ul#cols input {
+    width: 100%;
+    padding: 10px;
 }
-*/
 
-/*
-.form {
-    position: absolute;
-    top: 33%
+.lets-go {
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
-*/
 
-/*
 .btm-text {
-    position: absolute;
-    bottom: 20%;
+    padding-top: 15px;
+    margin-left: 50px;
 }
-*/
+
+.have-account {
+    padding-top: 15px;
+}
 
 .have-account a {
     color: red; /* change color when palette is selected */
@@ -63,7 +87,6 @@
 
 /* left sidebar content with image and text */
 .sidebar {
-    display: flex;
     min-width: 500px;
 }
 
