@@ -15,34 +15,39 @@
             </div>
         </div>
         <div class="main-content">
-            <div class="top-text">Filler text goes here.</div>
-            <div class="form">
-                <form id="signupform" class="signup-form">
-                    <div class="signup-form-name">
-                        <label for="first-name">First Name</label>
-                        <input id="first-name" placeholder="First Name *" name="first-name" type="text" required>
-                    </div>
-                    <div class="signup-form-surname">
-                        <label for="surname">Last Name</label>
-                        <input id="surname" placeholder="Last Name *" name="surname" type="text" required>
-                    </div>
-                    <div class="signup-form-email">
-                        <label for="email">Email</label>
-                        <input id="email" placeholder="Email *" name="email" type="email" required>
-                    </div>
-                    <div class="signup-form-phone">
-                        <label for="phone">Phone Number</label>
-                        <input id="phone" placeholder="Phone Number" name="phone" type="tel">
-                    </div>
-                    <div class="signup-form-pass">
-                        <label for="pass">Password</label>
-                        <input id="pass" placeholder="Password *" name="pass" type="password" required>
-                    </div>
-                    <div class="signup-form-pass-confirm">
-                        <label for="pass-confirm">Confirm Password</label>
-                        <input id="pass-confirm" placeholder="Confirm Password *" name="pass-confirm" type="password" required>
-                    </div>
-                </form>
+            <div class="top-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur placerat lectus turpis. Donec nisi massa, congue id nibh in, euismod vehicula purus.</div>
+            <div class="form-wrapper">
+                <div class="form">
+                <div class="lets-go">Ikuze!</div>
+                    <form id="signup-form" class="signup-form">
+                        <ul id="cols">
+                            <li class="nav-li">
+                                <label for="first-name">First Name</label>
+                                <input id="first-name" placeholder="First Name *" name="first-name" type="text" required/>
+                            </li>
+                            <li class="nav-li">
+                                <label for="surname">Last Name</label>
+                                <input id="surname" placeholder="Last Name *" name="surname" type="text" required />
+                            </li>
+                            <li class="nav-li">
+                                <label for="email">Email</label>
+                                <input id="email" placeholder="Email *" name="email" type="email" required />
+                            </li>
+                            <li class="nav-li">
+                                <label for="phone">Phone Number</label>
+                                <input id="phone" placeholder="Phone Number" name="phone" type="tel" />
+                            </li>
+                            <li class="nav-li">
+                                <label for="pass">Password</label>
+                                    <input id="pass" placeholder="Password *" name="pass" type="password" required />
+                            </li>
+                            <li class="nav-li">
+                                <label for="pass-confirm">Confirm Password</label>
+                                    <input id="pass-confirm" placeholder="Confirm Password *" name="pass-confirm" type="password" required />
+                            </li>
+                        </ul>
+                    </form>
+                </div>
             </div>
             <div class="btm-text">
                 <div class="create-account">
